Change book name from project-based to model-based

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
   
 book:
-  title: "Advanced Measurement Theory: a Computational Project-Based Approach"
+  title: "Advanced Measurement Theory: a Computational Model-Based Approach"
   author: "William Murrah"
   chapters:
     - index.qmd
