Revise CTT to include data cleaning and scales of measurement.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,7 +14,7 @@ book:
     - statisticalthinkinglink.qmd
   page-footer:
     left: |
-      *Advanced Measurement Theory: a Computational Project-Based Approach* was written by William M. Murrah III.
+      *Advanced Measurement Theory: a Computational Model-Based Approach* was written by William M. Murrah III.
     right: |
       Return to  <a href="https://www.statistical-thinking.com">statistical-thinking.com</a>.
     
