--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,6 +11,7 @@ book:
     - ctt.qmd
     - generalizability.qmd
     - efa.qmd
+    - cfa.qmd
     - statisticalthinkinglink.qmd
   page-footer:
     left: |
