Add code for polytomous_irt

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,6 +13,7 @@ book:
     - efa.qmd
     - cfa.qmd
     - irt_dichotomous.qmd
+    - irt_polytomous.qmd
     - statisticalthinkinglink.qmd
   page-footer:
     left: |
